Sat Jan  3 16:34:35 2004  Boris Kolpackov  <boris@kolpackov.net>

	* CCF/CCF/IDL2/Traversal/Operation.hpp:
	* CCF/CCF/IDL2/Traversal/Operation.tpp:
	* CCF/CCF/IDL3/Traversal/Home.cpp:
	* CCF/CCF/IDL3/Traversal/Home.hpp:

	  Added receives_none() member function.

Fri Jan  2 16:09:32 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* ciao/Container_Base.cpp:

	  Fixed a compile error in single threaded configuration.

	* tools/Assembly_Deployer/Assembly_Impl.cpp:
	* tools/Assembly_Deployer/Assembly_Manager.cpp:
	* tools/ComponentServer/ComponentServer.cpp:
	* tools/XML_Helpers/RTConfig_Handlers.cpp:

	  Fixed more warnings with g++, mostly from the wrong usage of
	  _var's.

Fri Jan  2 15:36:07 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/Example/CIDL/LocalExecutorMapping/ExecutorMappingGenerator.cpp:
	* CCF/Example/CIDL/LocalExecutorMapping/ExecutorMappingGenerator.hpp:
	* CIDLC/ExecutorMappingGenerator.cpp:
	* CIDLC/ExecutorMappingGenerator.hpp:

	  Changed pass-by-value to pass-by-const-ref for fs::path argument.

Fri Jan  2 14:41:35 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/CCF/IDL2/LexicalAnalyzer.cpp:

	  Fixed small recognition bug.

	* CCF/CCF/IDL2/Traversal/Attribute.cpp:
	* CCF/CCF/IDL2/Traversal/Attribute.hpp:

	  Added traversal or readonly attribute.

	* CCF/Example/CIDL/LocalExecutorMapping/cidlc.cpp:
	* CCF/Example/CIDL/LocalExecutorMapping/ExecutorMappingGenerator.cpp:

	  Added support for readonly attribute.

	* CCF/Example/CIDL/LocalExecutorMapping/test-0_exec.idl.orig:
	* CCF/Example/CIDL/LocalExecutorMapping/test-1.idl:
	* CCF/Example/CIDL/LocalExecutorMapping/test-1_exec.idl.orig:
	* CCF/Example/CIDL/LocalExecutorMapping/test-2.idl:
	* CCF/Example/CIDL/LocalExecutorMapping/test-2_exec.idl.orig:

	  Updated tests and results.

	* CIDLC/ExecutorMappingGenerator.cpp:

	  Added support for readonly attribute.

Fri Jan  2 13:44:06 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>
